Javadoc clean-up to avoid warnings with newer Java versions